--- a/.gitignore
+++ b/.gitignore
@@ -110,5 +110,6 @@ fabric.properties
 modules.xml
 .idea/misc.xml
 *.ipr
+.idea
 
 # End of https://www.toptal.com/developers/gitignore/api/goland+iml,go
